--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -3,4 +3,4 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 
-<meta property="og:image" content="{{ .Site.Params.seo.ogbanner }}">
+<meta property="og:image" content="/{{ .Site.Params.seo.ogbanner }}">
