--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -2,5 +2,5 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-
+<script defer src="https://umami.marzuki.co/script.js" data-website-id="598a7577-6be5-4c96-908b-82f9cc84d4ce"></script>
 <meta property="og:image" content="/{{ .Site.Params.seo.ogbanner }}">
